# measurement

./: .gitignore  AUTHORS  CLEAN_FOR_MAINTAIN  Makefile.am  README  README.md  c00clupeaperf.1  configure.ac  deploy_darwin.sh  deploy_linux.sh  deploy_local.sh  testperftool
cutil/: create_junk_file.py  create_junk_files.py  create_junk_files.py~  measure_cat.py  measure_tar.py
src/: Makefile.am  c00clupeaperf.c  c00clupeaperf.c.orig  c00clupeaperf.h  c00clupeaperf.h.orig  global.h  macosx_clock.c  macosx_clock.c.orig  macosx_clock.h  macosx_clock.h.orig
